# NoLife

./: CMakeLists.txt  README.md
config/: menu_level.cfg  menu_scene.cfg  scenes.cfg
include/graphical/: Config.hpp  Window.hpp
include/scenes/: Scene.hpp  SceneManager.hpp
lib/config_loader/: CMakeLists.txt
lib/config_loader/config/: test.cfg
lib/config_loader/include/: ConfigLoader.hpp
lib/config_loader/sample/: main.cpp
lib/config_loader/src/: ConfigLoader.cpp
lib/logging/: CMakeLists.txt
src/: main.cpp
src/graphical/: Config.cpp  Window.cpp
src/scene/: Scene.cpp  SceneManager.cpp
